feat: ExecutionResultContext 리픽터링, NogiHistory 저장 로직, issue 전송 로직 개발(비고참조)
- ExecutionResultContext userId, pageId를 따로 받았는데 userId를 받는 것으로 통일
- NogiHistory 저장 로직 수정
- github issue 전송 로직 개발